--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.0.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.jakewharton:butterknife:8.1.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+    implementation 'com.squareup.picasso:picasso:2.5.0'
 }
