--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     implementation 'com.squareup.picasso:picasso:2.5.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.github.ivbaranov:materialfavoritebutton:0.1.5'
 }
